--- a/sanderx/sobre.html
+++ b/sanderx/sobre.html
@@ -7,184 +7,8 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-green: #00ff88;
-            --dark-bg: #0a0a0a;
-            --card-bg: #1a1a1a;
-            --text-primary: #ffffff;
-            --text-secondary: #b0b0b0;
-            --border-color: #2a2a2a;
-        }
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        body {
-            font-family: 'Inter', sans-serif;
-            background: var(--dark-bg);
-            color: var(--text-primary);
-            line-height: 1.6;
-            overflow-x: hidden;
-        }
-        .navbar {
-            background: rgba(10, 10, 10, 0.95);
-            backdrop-filter: blur(20px);
-            border-bottom: 1px solid var(--border-color);
-            padding: 1rem 0;
-            position: fixed;
-            width: 100%;
-            top: 0;
-            z-index: 1000;
-            transition: all 0.3s ease;
-        }
-        .navbar-brand {
-            font-weight: 800;
-            font-size: 1.5rem;
-            color: var(--primary-green) !important;
-            text-decoration: none;
-        }
-        .navbar-nav .nav-link {
-            color: var(--text-primary) !important;
-            font-weight: 500;
-            margin: 0 0.5rem;
-            transition: all 0.3s ease;
-            position: relative;
-        }
-        .navbar-nav .nav-link:hover {
-            color: var(--primary-green) !important;
-        }
-        .navbar-nav .nav-link::after {
-            content: '';
-            position: absolute;
-            bottom: -5px;
-            left: 0;
-            width: 0;
-            height: 2px;
-            background: var(--primary-green);
-            transition: width 0.3s ease;
-        }
-        .navbar-nav .nav-link:hover::after {
-            width: 100%;
-        }
-        .btn-talk {
-            background: var(--primary-green);
-            color: var(--dark-bg);
-            border: none;
-            padding: 0.5rem 1.5rem;
-            border-radius: 25px;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-        .btn-talk:hover {
-            background: #00cc6a;
-            transform: translateY(-2px);
-            box-shadow: 0 10px 30px rgba(0, 255, 136, 0.3);
-        }
-        .theme-toggle {
-            background: var(--card-bg);
-            border: 1px solid var(--border-color);
-            color: var(--text-primary);
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            transition: all 0.3s ease;
-        }
-        .theme-toggle:hover {
-            background: var(--primary-green);
-            color: var(--dark-bg);
-        }
-        .sobre-hero {
-            padding: 140px 0 60px;
-            background: linear-gradient(135deg, var(--dark-bg) 0%, #111 100%);
-            text-align: center;
-            position: relative;
-        }
-        .sobre-hero h1 {
-            font-weight: 800;
-            font-size: clamp(2.5rem, 5vw, 4rem);
-            margin-bottom: 1rem;
-            background: linear-gradient(135deg, var(--text-primary) 0%, var(--primary-green) 100%);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
-        }
-        .sobre-hero p {
-            color: var(--text-secondary);
-            font-size: 1.3rem;
-            max-width: 700px;
-            margin: 0 auto 2rem;
-        }
-        .sobre-section {
-            background: var(--card-bg);
-            border-radius: 20px;
-            padding: 3rem 2rem;
-            margin: 2rem 0;
-            max-width: 900px;
-            margin-left: auto;
-            margin-right: auto;
-            box-shadow: 0 8px 32px rgba(0,0,0,0.18);
-        }
-        .sobre-section h2 {
-            color: var(--primary-green);
-            font-weight: 700;
-            margin-bottom: 1rem;
-        }
-        .sobre-section ul {
-            color: var(--text-secondary);
-            margin-bottom: 1rem;
-        }
-        .sobre-avatar {
-            width: 120px;
-            height: 120px;
-            border-radius: 50%;
-            background: linear-gradient(135deg, var(--primary-green), #00cc6a);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 3rem;
-            color: var(--dark-bg);
-            margin: 0 auto 1.5rem;
-        }
-        .footer {
-            background: var(--card-bg);
-            padding: 60px 0 30px;
-            border-top: 1px solid var(--border-color);
-        }
-        .footer-brand {
-            font-weight: 800;
-            font-size: 1.5rem;
-            color: var(--primary-green);
-            margin-bottom: 1rem;
-        }
-        .social-links {
-            display: flex;
-            gap: 1rem;
-            margin-top: 1rem;
-        }
-        .social-link {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 45px;
-            height: 45px;
-            background: var(--dark-bg);
-            color: var(--text-primary);
-            border-radius: 50%;
-            text-decoration: none;
-            transition: all 0.3s ease;
-            border: 1px solid var(--border-color);
-        }
-        .social-link:hover {
-            background: var(--primary-green);
-            color: var(--dark-bg);
-            transform: translateY(-3px);
-        }
-        @media (max-width: 768px) {
-            .sobre-section { padding: 2rem 1rem; }
-            .sobre-hero { padding: 110px 0 40px; }
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/cssAuxiliar.css">
 </head>
 <body>
     <!-- Navigation -->
