--- a/sanderx/index.html
+++ b/sanderx/index.html
@@ -304,33 +304,33 @@
                 <div class="col-lg-2 col-md-6">
                     <h5 style="color: var(--primary-green); margin-bottom: 1rem;">Blog</h5>
                     <ul style="list-style: none; padding: 0;">
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Últimos Posts</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Categorias</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Tags</a></li>
+                        <li><a href="#" >Últimos Posts</a></li>
+                        <li><a href="#" >Categorias</a></li>
+                        <li><a href="#" >Tags</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 style="color: var(--primary-green); margin-bottom: 1rem;">Recursos</h5>
                     <ul style="list-style: none; padding: 0;">
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Tutoriais</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Downloads</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Templates</a></li>
+                        <li><a href="#" >Tutoriais</a></li>
+                        <li><a href="#" >Downloads</a></li>
+                        <li><a href="#" >Templates</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 style="color: var(--primary-green); margin-bottom: 1rem;">Suporte</h5>
                     <ul style="list-style: none; padding: 0;">
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">FAQ</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Contato</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Feedback</a></li>
+                        <li><a href="#" >FAQ</a></li>
+                        <li><a href="contato.html" >Contato</a></li>
+                        <li><a href="#" >Feedback</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-2 col-md-6">
                     <h5 style="color: var(--primary-green); margin-bottom: 1rem;">Legal</h5>
                     <ul style="list-style: none; padding: 0;">
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Privacidade</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Termos</a></li>
-                        <li><a href="#" style="color: var(--text-secondary); text-decoration: none;">Cookies</a></li>
+                        <li><a href="#" >Privacidade</a></li>
+                        <li><a href="#" >Termos</a></li>
+                        <li><a href="#" >Cookies</a></li>
                     </ul>
                 </div>
             </div>
